--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Welcome <%= @email %>!</p>
+<p>Bem-vindo <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>Você pode validar o seu email com o link abaixo:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to 'Validar minha conta', confirmation_url(@resource, confirmation_token: @token) %></p>
