Aprimorando o header com as funcionalidades do Devise e traduzindo algumas labels de sign in e log in.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,21 +13,21 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label "Nova senha" %> <i>(deixe em branco se não quiser alterá-la)</i><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <em>obs: deve ter, no mínimo, <%= @minimum_password_length %> caracteres</em>
     <% end %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label "Repita sua nova senha" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label "Senha atual" %> <i>(para confirmar sua nova senha)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
@@ -36,8 +36,8 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Cancelamento de conta</h3>
 
-<div>Unhappy? <%= button_to "Quero cancelar minha conta", registration_path(resource_name), data: { confirm: "Tem certeza?", turbo_confirm: "Tem certeza?" }, method: :delete %></div>
+<div>Está infeliz com seu perfil? <%= button_to "Quero cancelar minha conta", registration_path(resource_name), data: { confirm: "Tem certeza?", turbo_confirm: "Tem certeza?" }, method: :delete %></div>
 
 <%= link_to "Voltar", :back %>
