--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,14 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
-<div id='search-cliente'>
+<div id='busca-cliente'>
   <%= form_with(url: clientes_path, method: 'get') do |form| %>
     <h3>Procurar clientes</h3>
     Filtrar por
-    <%= select_tag(:atributo, options_for_select([
-                                                   ['Nome', 'nome'],
-                                                   ['CPF', 'cpf'],
-                                                   ['Email', 'email']
-                                                 ])) %>
+    <%= select_tag(:atributo, options_for_select([['Nome', 'nome'], ['CPF', 'cpf'], ['Email', 'email']])) %>
     <%= text_field_tag(:busca) %>
     <%= form.submit("Procurar") %>
   <% end %>
@@ -36,14 +32,13 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
-        const selecionarAtributo = document.getElementById('attribute');
-        const campoDeBusca = document.getElementById('search-fields');
-
+        const selecionarAtributo = document.getElementById('atributo');
+        const campoDeBusca = document.getElementById('busca-fields');
         selecionarAtributo.addEventListener('change', function () {
             const opcaoSelecionada = this.value;
             if (opcaoSelecionada === 'nome' || opcaoSelecionada === 'cpf' || opcaoSelecionada === 'email') {
-                campoDeBusca.innerHTML = `<label for="search">Busca por ${opcaoSelecionada}:</label>
-                                  <input type="text" name="search" id="search-field" placeholder="Digite a busca...">`;
+                campoDeBusca.innerHTML = `<label for="busca">Busca por ${opcaoSelecionada}:</label>
+                                  <input type="text" name="busca" id="busca-field" placeholder="Digite a busca...">`;
             } else {
                 campoDeBusca.innerHTML = '';
             }
